# autonomous--hobbit-2-yeoomj

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  release.yml  web-ci.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/ansible/inventory/: dev.yml  prod.yml
infrastructure/ansible/playbooks/: deploy.yml  setup.yml
infrastructure/docker/deepstream/: Dockerfile
infrastructure/docker/gazebo/: Dockerfile
infrastructure/docker/ros2/: Dockerfile
infrastructure/docker/tao/: Dockerfile
infrastructure/k8s/apps/backend/: deployment.yaml  ingress.yaml  service.yaml
infrastructure/k8s/apps/deepstream/: deployment.yaml  service.yaml
infrastructure/k8s/apps/gazebo/: deployment.yaml  service.yaml
infrastructure/k8s/apps/minio/: pvc.yaml  service.yaml  statefulset.yaml
infrastructure/k8s/apps/redis/: pvc.yaml  service.yaml  statefulset.yaml
infrastructure/k8s/apps/ros2/: deployment.yaml  service.yaml
infrastructure/k8s/apps/tao/: deployment.yaml  service.yaml
infrastructure/k8s/apps/timescaledb/: pvc.yaml  service.yaml  statefulset.yaml
infrastructure/k8s/apps/web/: deployment.yaml  ingress.yaml  service.yaml
infrastructure/k8s/base/: configmaps.yaml  kustomization.yaml  namespace.yaml  secrets.yaml  storage-class.yaml
infrastructure/k8s/monitoring/grafana/: configmap.yaml  deployment.yaml  service.yaml
infrastructure/k8s/monitoring/jaeger/: deployment.yaml  service.yaml
infrastructure/k8s/monitoring/prometheus/: configmap.yaml  deployment.yaml  service.yaml
infrastructure/k8s/overlays/dev/: kustomization.yaml
infrastructure/k8s/overlays/prod/: kustomization.yaml
infrastructure/k8s/security/keycloak/: configmap.yaml  deployment.yaml  service.yaml
infrastructure/k8s/security/vault/: configmap.yaml  deployment.yaml  service.yaml
infrastructure/terraform/: main.tf  outputs.tf  providers.tf  variables.tf
infrastructure/terraform/environments/dev/: main.tf  terraform.tfvars
infrastructure/terraform/environments/prod/: main.tf  terraform.tfvars
infrastructure/terraform/modules/kubernetes/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/network/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/storage/: main.tf  outputs.tf  variables.tf
src/backend/: .dockerignore  .env.example  README.md  docker-compose.yml  jest.config.ts  nodemon.json  package.json  tsconfig.json
src/backend/src/: app.ts  server.ts
src/backend/src/config/: database.ts  deepstream.ts  gazebo.ts  logging.ts  minio.ts  redis.ts  ros.ts  security.ts  tao.ts
src/backend/src/constants/: errorCodes.ts  missionStatus.ts  robotTypes.ts  telemetryTypes.ts
src/backend/src/controllers/: analytics.controller.ts  device.controller.ts  mission.controller.ts  telemetry.controller.ts  treatment.controller.ts
src/backend/src/deepstream/: CMakeLists.txt  pipeline.cpp
src/backend/src/deepstream/models/: README.md
src/backend/src/deepstream/processors/: objectDetection.cpp  videoAnalytics.cpp
src/backend/src/deepstream/utils/: tensorrt.cpp
src/backend/src/interfaces/: IAnalytics.ts  IDevice.ts  IMission.ts  ITelemetry.ts  ITreatment.ts
src/web/: .dockerignore  .env.example  .eslintrc.json  .prettierrc  Dockerfile  README.md  index.html  jest.config.ts  package.json  tsconfig.json  vite.config.ts
src/web/src/: App.tsx  main.tsx  vite-env.d.ts
src/web/tests/: setup.ts
(+160 files in other folders)
